# space

./: Cargo.toml  LICENSE
assets/bodies/: all-bodies-query.txt  all-bodies.json  major-bodies-query.txt  major-bodies.json
assets/glb/: sphereUV.glb
assets/shaders/: star.wgsl
src/: main.rs
src/space/: body_ref.rs  camera.rs  mod.rs  selection.rs  setup.rs  simulation.rs  simulation_sync.rs  target_transform.rs  unconstrained_orbit_driver.rs
src/space/body_bundle/: body_mass.rs  body_trail.rs  body_velocity.rs  mod.rs  query.rs
src/space/controls/: keyboard.rs  mod.rs
src/space/controls/camera/: camera_orbit_driver.rs  camera_sensitivity.rs  mod.rs
src/space/display/: body_ref.rs  body_trail.rs  body_trail_ref.rs  camera.rs  custom_params.rs  mod.rs  realistic.rs  relative_world_offset.rs  relative_world_scale.rs  schematic.rs  selection.rs  star_material.rs  sync.rs  view_mode.rs
src/space/ext/: mod.rs  valid_entity.rs
src/space/nasa_horizons/: mod.rs
src/space/scene/: MB-2.txt  mod.rs  selection.rs  setup.rs  spawn_body.rs
src/space/scene/solar_system/: earth.rs  jupiter.rs  mars.rs  mercury.rs  mod.rs  moon.rs  neptune.rs  saturn.rs  sun.rs  uranus.rs  venus.rs
src/space/simulation/: mod.rs  nasa_horizons.rs  params.rs  space_simulation.rs
src/space/ui/: mod.rs
