[package]
name = "space"
version = "0.1.0"
edition = "2021"


[dependencies]
bevy = { version = "0.9.1", default_features = false, features = ["bevy_core_pipeline", "bevy_pbr", "bevy_render", "bevy_asset", "hdr", "x11"] }
bevy_polyline = "0.4.0"
bevy_ecs_markers = "1.0.4"
bevy_mod_raycast = "0.7.0"
bevy_dolly = { git = "https://github.com/BlackPhlox/bevy_dolly" }
bevy_prototype_lyon = "0.7.2"
derive_more = "0.99.17"
ringbuffer = "0.11.1"
bevy_editor_pls = "*"
itertools = "0.10.5"
nohash-hasher = "0.2.0"
rug = "1.19.0"
soa_derive = "0.12.0"
noisy_bevy = "0.2.0"
